--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-
 /* Main container */
 .vc-container{
 	text-align: center;
@@ -33,14 +32,14 @@
 	bottom: 50px;
 	left: 50%;
 	margin: -15px 0 0 -15px;
-	background: transparent url(../images/ajax-loader.gif) no-repeat center center;
+	background: transparent url(https://kiyoshichang.github.io/cassette/images/ajax-loader.gif) no-repeat center center;
 	display: none;
 }
 .vc-tape-back{
 	width: 100%;
 	height: 100%;
 	position: relative;
-	background: transparent url(../images/cs_back.png) no-repeat center center;
+	background: transparent url(https://kiyoshichang.github.io/cassette/images/cs_back.png) no-repeat center center;
 }
 .vc-tape-wheel{
 	width: 125px;
@@ -100,13 +99,13 @@
 .vc-tape-wheel div{
 	width: 100%;
 	height: 100%;
-	background: transparent url(../images/cs_wheel.png) no-repeat center center;
+	background: transparent url(https://kiyoshichang.github.io/cassette/images/cs_wheel.png) no-repeat center center;
 }
 .vc-tape-front{
 	width: 100%;
 	height: 100%;
 	position: absolute;
-	background: transparent url(../images/cs_front.png) no-repeat center center;
+	background: transparent url(https://kiyoshichang.github.io/cassette/images/cs_front.png) no-repeat center center;
 	top: 0px;
 	left: 0px;
 }
@@ -172,7 +171,7 @@ ul.vc-controls li {
     padding: 10px;
 	margin: 0;
     cursor: pointer;
-    background: #ddd url(../images/metal.jpg) no-repeat center top;
+    background: #ddd url(https://kiyoshichang.github.io/cassette/images/metal.jpg) no-repeat center top;
 	box-shadow: 
 		inset 0 0 0 1px rgba(0,0,0, 0.2), 
 		inset 0 0 1px 2px rgba(255,255,255,0.9),
@@ -241,7 +240,7 @@ ul.vc-controls li:hover{
 ul.vc-controls li.vc-control-active{
 	height: 50px;
 	margin-top: 2px;
-	background-image: url(../images/metal_dark.jpg);
+	background-image: url(https://kiyoshichang.github.io/cassette/images/metal_dark.jpg);
 	box-shadow: 
 		inset 0 0 0 1px rgba(0,0,0, 0.18), 
 		inset 0 0 1px 2px rgba(255,255,255,0.5),
@@ -255,7 +254,7 @@ ul.vc-controls li.vc-control-active{
 ul.vc-controls li.vc-control-pressed,
 ul.vc-controls li.vc-control-active.vc-control-pressed{
 	height: 50px;
-	background-image: url(../images/metal_dark.jpg);
+	background-image: url(https://kiyoshichang.github.io/cassette/images/metal_dark.jpg);
 	margin-top: 4px;
 	box-shadow: 
 		inset 0 0 0 1px rgba(0,0,0, 0.2), 
