--- a/css/knobKnob.css
+++ b/css/knobKnob.css
@@ -11,7 +11,7 @@
 	position: absolute;
 	width: 100%;
 	height: 100%;
-	background: url(../images/knob.jpg) no-repeat center center;
+	background: url(https://kiyoshichang.github.io/cassette/images/knob.jpg) no-repeat center center;
 	z-index: 10;
 	cursor: default !important;
 	border-radius: 50%;
